<resources>
    <string name="app_name">PlayerDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="select_fragment_label">Selector Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_list">Media</string>
    <string name="playlist">Playlist</string>
    <string name="reco">Recommendations</string>
    <string name="tracks">You might like tracks…</string>
    <string name="albums">You might also like albums…</string>
    <string name="empty_playlist">Playlist is empty</string>
    <string name="empty_playlist_directive">Create playlist on Media screen ➜</string>
    <string name="stats_list">Stats</string>
    <string name="freqs">Frequencies (Hz)</string>
    <string name="bitrate">Bitrate</string>
    <string name="max_bitrate">Max bitrate</string>
    <string name="sample_rate">Sample Rate (Hz)</string>
    <string name="channel_count">Channels</string>
    <string name="mime">MIME</string>
    <string name="encoding">Encoding</string>
    <string name="spectrogram">Spectrogram</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="add_pl">Add to playlist</string>
    <string name="remove_pl">Remove</string>
    <string name="share">Share</string>
    <string name="no_data">No data</string>
    <string name="no_lyrics">No lyrics available</string>
    <string name="lyrics_error">Error: </string>
    <string name="lyrics_not_avail">These lyrics are not available in your region currently.</string>
    <string name="perm_request">Notification permission was not granted.</string>
    <string name="to_be_done">Not implemented</string>
</resources>