<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@drawable/menu_rounded_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu_play"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:visibility="gone"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:background="@drawable/ripple_selector_top_corners"
        android:text="@string/play" />

    <View
        android:id="@+id/d1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/menu_add_to_playlist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:background="@drawable/ripple_selector"
        android:text="@string/add_pl" />

    <View
        android:id="@+id/d2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/menu_remove_from_playlist"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:background="@drawable/ripple_selector"
        android:text="@string/remove_pl" />

    <View
        android:id="@+id/d3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/menu_info"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:visibility="gone"
        android:textColor="@color/black"
        android:background="@drawable/ripple_selector"
        android:text="@string/info" />

    <View
        android:id="@+id/d4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/menu_share"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:background="@drawable/ripple_selector_bottom_corners"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/share" />

</LinearLayout>